# src/routes/notes.route.js
@@ -1,7 +1,7 @@
 import express from 'express';
-// import * as userController from '../controllers/user.controller';
 import * as notesController from '../controllers/notes.controller';
 import { userAuth } from '../middlewares/auth.middleware';
+import { cacheMiddleware } from '../middlewares/redis.middleware';
 
 const router = express.Router();
 
@@ -13,7 +13,8 @@ router.get('/', (req, res) => {
 router.post('/createNote', userAuth, notesController.createNote);
 
 //&    Route to GET ALL Notes >>>
-router.get('/getAllNote', userAuth, notesController.getAllNotes);
+// router.get('/getAllNote', userAuth, notesController.getAllNotes);
+router.get('/getAllNote', userAuth, cacheMiddleware(3600), notesController.getAllNotes);
 
 //*    Route to Update Notes >>>
 router.put('/updateNote/:id', userAuth, notesController.updateNote);
@@ -22,15 +23,24 @@ router.put('/updateNote/:id', userAuth, notesController.updateNote);
 router.delete('/deleteNote/:id', userAuth, notesController.deleteNote);
 
 //&    Route to Get Archive >>>
-router.get('/archive', userAuth, notesController.getArchivedNotes);
+router.get('/archive', userAuth, cacheMiddleware(3600), notesController.getArchivedNotes);
+
 
 //&    Route to Get Trash >>>
-router.get('/trash', userAuth, notesController.getTrashedNotes);
+router.get('/trash', userAuth, cacheMiddleware(3600), notesController.getTrashedNotes);
+
+
+//&    Route to Archive Note by ID
+router.put('/archiveNote/:id', userAuth, notesController.archiveNoteById);
+
+//&    Route to Trash Note by ID
+router.put('/trashNote/:id', userAuth, notesController.trashNoteById);
+
+//&    Route to Unarchive Note by ID
+router.put('/unarchiveNote/:id', userAuth, notesController.unarchiveNoteById);
+
+//&    Route to Untrash Note by ID
+router.put('/untrashNote/:id', userAuth, notesController.untrashNoteById);
+
 
 export default router;
-
-// isarchve and istrash false then show in getallnotes,
-// if isTrash true then show in getall/trash.
-// if isArchive true then show in getall/archieve.
-// if it is in Trash then, we can restore to archiev or delete permanently.
-// Forgot password.
